# dusk-lang

./: .gitignore  CMakeLists.txt  LICENSE  README.md  grammar.txt  test.cpp
docs/Language reference/: Declarations.md  Expressions.md  Statements.md  Types.md  index.md
examples/: array.dusk  arrayMax.dusk  arrayTest.dusk  consts.dusk  factIter.dusk  factRec.dusk  factor.dusk  fibonacci.dusk  funcDecl.dusk  gcd.dusk  globExpr.dusk  inOut.dusk  interpRec.dusk  isPrime.dusk  sortBubble.dusk
include/: CMakeLists.txt
include/dusk/: CMakeLists.txt  Strings.h
include/dusk/AST/: ASTContext.h  ASTDiagnostic.h  ASTNode.h  ASTPrinter.h  ASTVisitor.h  ASTWalker.h  CMakeLists.txt  Decl.h  DeclNodes.def  Diagnostics.def  Diagnostics.h  DiagnosticsParse.def  DiagnosticsParse.h  DiagnosticsSema.def  Expr.h  ExprNodes.def  NameLookup.h  Pattern.h  PatternNodes.def  Scope.h  Stmt.h  StmtNodes.def  Type.h  TypeNodes.def  TypeRepr.h  TypeReprNodes.def
include/dusk/Basic/: CMakeLists.txt  LLVM.h  SourceManager.h  TokenDefinition.h  TokenDefinitions.def  TokenDefinitions.h
include/dusk/Frontend/: CMakeLists.txt  Compiler.h  CompilerInstance.h  CompilerInvocation.h  Formatter.h  InputFile.h  SourceFile.h
include/dusk/IRGen/: CMakeLists.txt  Context.h  IRGenerator.h  Scope.h
include/dusk/Parse/: CMakeLists.txt  Lexer.h  Parser.h  ParserResult.h  Token.h  TokenDefinition.h
include/dusk/Parser/: CMakeLists.txt  Lexer.h  Token.h  TokenDefinition.h
include/dusk/Runtime/: CMakeLists.txt  RuntimeFuncWrapper.h  RuntimeFuncs.h
include/dusk/Sema/: CMakeLists.txt  Context.h  Scope.h  Sema.h  TypeResolver.h
lib/: CMakeLists.txt
lib/AST/: ASTContext.cpp  ASTDiagnostic.cpp  ASTNode.cpp  ASTPrinter.cpp  ASTWalker.cpp  CMakeLists.txt  Decl.cpp  Diagnostics.cpp  Expr.cpp  NameLookup.cpp  Pattern.cpp  Scope.cpp  Stmt.cpp  Type.cpp  TypeRepr.cpp
lib/Basic/: CMakeLists.txt  SourceManager.cpp
lib/Frontend/: CMakeLists.txt  Compiler.cpp  CompilerInstance.cpp  CompilerInvocation.cpp  InputFile.cpp
lib/IRGen/: Address.h  Alignment.h  CMakeLists.txt  Context.cpp  GenDecl.cpp  GenDecl.h  GenExpr.cpp  GenExpr.h  GenFunc.cpp  GenFunc.h  GenLValue.cpp  GenModule.cpp  GenModule.h  GenRValue.cpp  GenStmt.cpp  GenStmt.h  GenType.cpp  GenType.h  IRGenFunc.cpp  IRGenFunc.h  IRGenModule.cpp  IRGenModule.h  IRGenValue.cpp  IRGenValue.h  IRGenerator.cpp  LoopInfo.cpp  LoopInfo.h  Scope.cpp
lib/Parser/: CMakeLists.txt  Lexer.cpp  ParseDecl.cpp  ParseExpr.cpp  ParseGeneric.cpp  ParsePattern.cpp  ParseStmt.cpp  ParseType.cpp  Parser.cpp  Token.cpp
lib/Sema/: CMakeLists.txt  Context.cpp  Scope.cpp  Sema.cpp  TypeCheckDecl.cpp  TypeCheckExpr.cpp  TypeCheckPattern.cpp  TypeCheckStmt.cpp  TypeCheckType.cpp  TypeChecker.cpp  TypeChecker.h  TypeResolver.cpp
src/: CMakeLists.txt  main.cpp
stdlib/: CMakeLists.txt
stdlib/runtime/: CMakeLists.txt  io.cpp  io.h  iter.cpp  iter.h
tools/: CMakeLists.txt
tools/dusk-format/: CMakeLists.txt  README.md  main.cpp
tools/duskc/: CMakeLists.txt  README.md  main.cpp
