set(STDLIB_TARGET stddusk)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
add_subdirectory(runtime)

set(RUNTIME_HEADERS
    ${RUNTIME_HEADERS}
    PARENT_SCOPE
)

set(RUNTIME_SOURCE
    ${RUNTIME_SOURCE}
    PARENT_SCOPE
)

add_library(${STDLIB_TARGET} SHARED ${RUNTIME_SOURCE} ${RUNTIME_HEADERS})
set_target_properties(${STDLIB_TARGET} PROPERTIES
    VERSION 1.0.0
    SOVERSION 1
    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../bin
    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../bin
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../bin
)

target_include_directories(${STDLIB_TARGET} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
